subida de calificaciones y primeras cosas de roles

--- a/readme
+++ b/readme
@@ -2,3 +2,4 @@
 Primero, instala la librería en tu proyecto Laravel utilizando Composer:
 
 composer require maatwebsite/excel
+composer require spatie/laravel-permission
